--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <html>
     <body>
         <script src="./diceroll.js"></script>
+        <style>
+            div {
+                color: #000;
+                font-size: 22px;
+                text-align: center;
+                font-family: 'Arial';
+                vertical-align: middle;
+            }
+            p {
+                padding-top: 15px;
+            }
+        </style>
     </body>
 </html>
